--- a/WellDoneIt/WellDoneIt/Views/MainPage.xaml
+++ b/WellDoneIt/WellDoneIt/Views/MainPage.xaml
@@ -3,5 +3,5 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WellDoneIt.Views.MainPage" >
   
-  <Label Text="WellDoneIt z MVVM Light" VerticalOptions="Center" HorizontalOptions="Center" />
+  <Label Text="{Binding Title}" VerticalOptions="Center" HorizontalOptions="Center" />
 </ContentPage>
