--- a/WellDoneIt/WellDoneIt/Views/MainPage.xaml
+++ b/WellDoneIt/WellDoneIt/Views/MainPage.xaml
@@ -2,6 +2,10 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WellDoneIt.Views.MainPage" >
-  
-  <Label Text="{Binding Title}" VerticalOptions="Center" HorizontalOptions="Center" />
+  <StackLayout>
+    <Label Text="{Binding Title}" VerticalOptions="Center" HorizontalOptions="Center" />
+    <Button Text="Inbox" Command="{Binding NavigationCommand}" CommandParameter="InBox"></Button>
+    <Button Text="Today" Command="{Binding NavigationCommand}" CommandParameter="Today"></Button>
+    <Button Text="Next Action" Command="{Binding NavigationCommand}" CommandParameter="Next Action"></Button>
+  </StackLayout>
 </ContentPage>
