--- a/WellDoneIt/WellDoneIt/Views/MainPage.xaml
+++ b/WellDoneIt/WellDoneIt/Views/MainPage.xaml
@@ -1,11 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="WellDoneIt.Views.MainPage" >
-  <StackLayout>
+             x:Class="WellDoneIt.Views.MainPage" Title="{Binding Title}">
+  <!--<StackLayout>
     <Label Text="{Binding Title}" VerticalOptions="Center" HorizontalOptions="Center" />
     <Button Text="Inbox" Command="{Binding NavigationCommand}" CommandParameter="InBox"></Button>
     <Button Text="Today" Command="{Binding NavigationCommand}" CommandParameter="Today"></Button>
     <Button Text="Next Action" Command="{Binding NavigationCommand}" CommandParameter="Next Action"></Button>
+  </StackLayout>-->
+  <StackLayout BackgroundColor="Black">
+    <StackLayout Orientation="Horizontal">
+    <Image Source="inbox64.png">
+      <Image.GestureRecognizers>
+        <TapGestureRecognizer Command="{Binding NavigationCommand}" CommandParameter="InBox"/>
+      </Image.GestureRecognizers>
+    </Image>
+      <Label Text="Inbox" TextColor="White" VerticalTextAlignment="Center">
+        <Label.GestureRecognizers>
+          <TapGestureRecognizer Command="{Binding NavigationCommand}" CommandParameter="InBox"/>
+        </Label.GestureRecognizers>
+      </Label>
+    </StackLayout>
+    <StackLayout Orientation="Horizontal">
+      <Image Source="inbox64.png">
+        <Image.GestureRecognizers>
+          <TapGestureRecognizer Command="{Binding NavigationCommand}" CommandParameter="Today"/>
+        </Image.GestureRecognizers>
+      </Image>
+      <Label Text="Today" TextColor="White" VerticalTextAlignment="Center">
+        <Label.GestureRecognizers>
+          <TapGestureRecognizer Command="{Binding NavigationCommand}" CommandParameter="Today"/>
+        </Label.GestureRecognizers>
+      </Label>
+    </StackLayout>
   </StackLayout>
 </ContentPage>
