EventToCommand from ListView added

--- a/WellDoneIt/WellDoneIt/Views/ListPage.xaml
+++ b/WellDoneIt/WellDoneIt/Views/ListPage.xaml
@@ -1,7 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:local="clr-namespace:WellDoneIt;assembly=WellDoneIt"
              x:Class="WellDoneIt.Views.ListPage" Title="Lists">
+  <ContentPage.Resources>
+		<ResourceDictionary>
+			<local:SelectedItemEventArgsToSelectedItemConverter x:Key="SelectedItemConverter" />
+		</ResourceDictionary>
+	</ContentPage.Resources> 
+    
   <ContentPage.ToolbarItems>
     <ToolbarItem Text="Add" 
                  Icon="add64.png"
@@ -13,6 +20,10 @@
     <!--<Label Text="{Binding ParameterText}" VerticalOptions="Center" HorizontalOptions="Center" />
     <Button Text="Go Back" Command="{Binding NavigationBackCommand}"/>-->
     <ListView ItemsSource="{Binding WellDoneItList}" >
+			<ListView.Behaviors>
+				<!--<local:ListViewSelectedItemBehavior Command="{Binding CompleteTaskCommand}" Converter="{StaticResource SelectedItemConverter}" />-->
+								<local:EventToCommandBehavior EventName="ItemSelected" Command="{Binding CompleteTaskCommand}" Converter="{StaticResource SelectedItemConverter}" />
+			</ListView.Behaviors>
       <ListView.ItemTemplate>
         <DataTemplate>
           <ViewCell >
@@ -22,7 +33,7 @@
                 <ColumnDefinition Width="*"/>
               </Grid.ColumnDefinitions>
               <Label Text="{Binding Title}" FontSize="16" Style="{DynamicResource ListItemTextStyle}" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand"/>
-              <Image Grid.Column="1" HorizontalOptions="End"  Source="check.png" />
+              <Image Grid.Column="1" HorizontalOptions="End"  Source="check.png"/>
             </Grid>
           </ViewCell>
         </DataTemplate>
