--- a/WellDoneIt/WellDoneIt/Views/MainPage.xaml
+++ b/WellDoneIt/WellDoneIt/Views/MainPage.xaml
@@ -2,6 +2,12 @@
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="WellDoneIt.Views.MainPage" Title="{Binding Title}">
+  <ContentPage.ToolbarItems>
+    <ToolbarItem Text="Add"
+                 Icon="add64.png"
+                 Command="{Binding AddNewTaskCommand}"
+                 Order="Primary"/>
+  </ContentPage.ToolbarItems>
   <!--<StackLayout>
     <Label Text="{Binding Title}" VerticalOptions="Center" HorizontalOptions="Center" />
     <Button Text="Inbox" Command="{Binding NavigationCommand}" CommandParameter="InBox"></Button>
